[package]
name = "auth_server"
version = "0.1.0"
authors = ["vaisvanara <andrei.nikolaew@gmail.com>"]

[dependencies]
hyper = "0.12.8"
serde = "1.0.71"
serde_json = "1.0.24"
serde_derive = "1.0.71"
futures = "0.1.23"
postgres = "0.15.2"
rust-crypto = "0.2.36"
sha2 = "*"
"rustc-serialize"="*"
uuid = { version = "0.6", features = ["v4"] }
"hyper-tls" = "0.3.0"
redis = "0.9.0"